[package]
name = "x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
csv-async = "1.2.6"
env_logger = "0.11.1"
log = "0.4.20"
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sqlx = { version = "0.7.3", features = ["postgres", "sqlite", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
